--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <section class="classificacao-container">
             <h1>Classificação 2024</h1>
             <div class="classificacao">
-                <img src="/imagens/classificação-1.png" alt="">
-                <img src="/imagens/classificação-2.png" alt="">
+                <img src="imagens/classificação-1.png" alt="">
+                <img src="imagens/classificação-2.png" alt="">
             </div>
         </section>
 
