--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
                     <li><a href="#">Sessão 3</a></li>
                     <li><a href="#">Sessão 4</a></li>
                     <li><a href="#">Sessão 5</a></li>
-                    <li><a href="#">Sessão 6</a></li>
-                    <li><a href="#">Sessão 7</a></li>
 
                 </ul>
             </nav>
@@ -50,8 +48,6 @@
                         <li><a href="#">Sessão 3</a></li>
                         <li><a href="#">Sessão 4</a></li>
                         <li><a href="#">Sessão 5</a></li>
-                        <li><a href="#">Sessão 6</a></li>
-                        <li><a href="#">Sessão 7</a></li>
                     </ul>
                 </nav>
             </div>
@@ -121,10 +117,10 @@
                 <div class="colum-footer">
                     <h4>Busque por sessões</h4>
                     <ul>
-                        <li><a href="#container-servicos">Nossos serviços</a></li>
-                        <li><a href="#sobre">Sobre nós</a></li>
-                        <li><a href="#projetos">Projetos</a></li>
-                        <li><a href="#diferenciais">Nossos Diferenciais</a></li>
+                        <li><a href="#">sessão 1</a></li>
+                        <li><a href="#">sessão 2</a></li>
+                        <li><a href="#">Sessão 3</a></li>
+                        <li><a href="#">Sessão 4</a></li>
                     </ul>
                 </div>
                 <div class="colum-footer colum-contact">
