--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
 
             <nav class="menu-destop">
                 <ul>
-                    <li><a href="#">sessão 1</a></li>
-                    <li><a href="#">sessão 2</a></li>
-                    <li><a href="#">Sessão 3</a></li>
-                    <li><a href="#">Sessão 4</a></li>
-                    <li><a href="#">Sessão 5</a></li>
+                    <li><a href="#classificacao">Classificação</a></li>
+                    <li><a href="#projetos">Equipes</a></li>
+                    <li><a href="#sobre">Sobre nós</a></li>
+                    <li><a href="#footer">Contatos</a></li>
 
                 </ul>
             </nav>
@@ -43,11 +42,10 @@
 
                 <nav>
                     <ul>
-                        <li><a href="#">sessão 1</a></li>
-                        <li><a href="#">sessão 2</a></li>
-                        <li><a href="#">Sessão 3</a></li>
-                        <li><a href="#">Sessão 4</a></li>
-                        <li><a href="#">Sessão 5</a></li>
+                        <li><a href="#classificacao">Classificação</a></li>
+                        <li><a href="#projetos">Equipes</a></li>
+                        <li><a href="#sobre">Sobre nós</a></li>
+                        <li><a href="#footer">Contatos</a></li>
                     </ul>
                 </nav>
             </div>
@@ -61,7 +59,7 @@
             <div class="banner-image" id="topo"></div>
         </section>
 
-        <section class="classificacao-container">
+        <section class="classificacao-container" id="classificacao">
             <h1>Classificação 2024</h1>
             <div class="classificacao">
                 <img src="imagens/classificação-1.png" alt="">
@@ -86,7 +84,7 @@
             </div>
         </section>
 
-        <section class="container-principal">
+        <section class="container-principal" id="sobre">
             <div class="container-sobre">
                 <h2>Uma história de sucesso</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed libero id augue vehicula gravida. In nisi arcu, laoreet ac malesuada eu, congue eget eros. Praesent congue purus eu ligula ultrices volutpat. Suspendisse quis velit id augue sodales consectetur.
@@ -111,16 +109,16 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="container-footer">
             <div class="row">
                 <div class="colum-footer">
                     <h4>Busque por sessões</h4>
                     <ul>
-                        <li><a href="#">sessão 1</a></li>
-                        <li><a href="#">sessão 2</a></li>
-                        <li><a href="#">Sessão 3</a></li>
-                        <li><a href="#">Sessão 4</a></li>
+                        <li><a href="#classificacao">Classificação</a></li>
+                        <li><a href="#projetos">Equipes</a></li>
+                        <li><a href="#sobre">Sobre nós</a></li>
+                        <li><a href="#footer">Contatos</a></li>
                     </ul>
                 </div>
                 <div class="colum-footer colum-contact">
