--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <main>
         <section class="banner">
-            <div class="banner-image" id="topo"></div>
+            <div class="banner-image" id="topo"><img src="/imagens/banner.png" alt=""></div>
         </section>
 
         <section class="classificacao-container" id="classificacao">
